# tangerine

./: Cargo.toml  README.md
benches/unified/: bench_map.rs  main.rs  maps.rs  util.rs
examples/: a.rs  asm.rs  asm16.rs  asm32.rs  asm64.rs  asm8.rs  crc.rs  displacement.rs  hash_u8_inverse.rs  hash_u8_perm.rs  histogram.rs  make_tbl_16.rs  make_tbl_8.rs  new.rs
src/: cast.rs  hash.rs  hash_aarch64.rs  hash_basic.rs  hash_fallback.rs  hash_generic.rs  internal_trait.rs  key.rs  key1.rs  lib.rs  map.rs  map1.rs  minv.rs  new.rs  old_map.rs  private_trait.rs  set.rs  two.rs  uint.rs  util.rs  word.rs
tests/unified/: main.rs  map.rs  test_hash.rs  test_map.rs  test_map1.rs  test_map2.rs  test_new.rs  test_old_map.rs  test_two.rs
