[package]
authors = ["Aaron Pribadi <aaron.pribadi@gmail.com>"]
edition = "2024"
license = "Artistic-2.0"
name = "tangerine"
version = "0.1.0"

[lints.rust]
elided_lifetimes_in_paths = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
private_bounds = "allow"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[dependencies]
dandelion-random = { git = "https://github.com/apribadi/dandelion.git", branch = "devel", features = ["rand_core", "thread_local"] }
rand_core = "0.9.3"

[dev-dependencies]
ahash = "0.8.12"
divan = "0.1.21"
expect-test = "1.5.1"
foldhash = "0.2.0"

[profile.release]

[profile.dev]

[[bench]]
name = "unified"
harness = false
