[package]
authors = ["Aaron Pribadi <aaron.pribadi@gmail.com>"]
edition = "2024"
keywords = ["hashmap", "intmap"]
categories = ["data-structures"]
license = "Artistic-2.0"
name = "tangerine-intmap"
version = "0.1.0"

[features]
default = ["nightly"]
nightly = []

[lib]
name = "tangerine"

[[bench]]
name = "unified"
harness = false

[[example]]
name = "asm"
crate-type = ["lib"]

[dependencies]
dandelion-random = { git = "https://github.com/apribadi/dandelion.git", branch = "devel", features = ["rand_core", "thread_local"] }
rand_core = "0.10.1"

[dev-dependencies]
ahash = "0.8.12"
divan = "0.1.21"
expect-test = "1.5.1"
foldhash = "0.2.0"
mimalloc = { version = "0.1.48", features = ["v3"] }

[profile.release]

[profile.dev]

[lints.rust]
elided_lifetimes_in_paths = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"
